(nav) fixed sizes and positioning, needs to do correct paddings on smaller devices

--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -1,7 +1,11 @@
 .nav {
 	position: fixed;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	top: 2rem;
 	left: 50%;
+	transform: translateX(-50%);
 	height: 6rem;
 	width: calc(100% - 4rem);
 	max-width: 1200px;
@@ -9,18 +13,15 @@
 	z-index: 9999;
 
 	&__wrapper {
+		position: absolute;
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		top: 2rem;
-		left: 50%;
-		transform: translateX(-50%);
 		height: 100%;
 		width: 100%;
 		border-radius: 32px;
 		padding: 1rem;
 		background-color: var(--white);
-		z-index: 9999;
 		@include shadow;
 	}
 	&__burger {
@@ -28,7 +29,6 @@
 			padding: 0 1.6rem;
 			background: none;
 			cursor: pointer;
-			// background-color: gold;
 
 			@media only screen and (min-width: 768px) {
 				display: none;
@@ -50,13 +50,25 @@
 		width: 100%;
 		left: 0;
 		bottom: 0;
-		transform: translateY(90%);
 		padding: 2rem;
 		background-color: var(--white);
 		border-radius: 0 0 32px 32px;
 		list-style: none;
-		// @include shadow;
+		transform: translateY(90%) scale(0);
+		transform-origin: top;
+		transition: transform 0.2s ease;
 		z-index: -1400;
+
+		@media only screen and(min-width:768px) {
+			position: initial;
+			flex-direction: row;
+			justify-content: flex-end;
+			height: 100%;
+			background: none;
+			z-index: 0;
+			transform: scale(1);
+		}
+
 		&--item {
 			position: relative;
 			padding: 0 1rem;
@@ -96,5 +108,5 @@
 	}
 }
 .active {
-	background-color: gold;
+	transform: translateY(90%) scale(1);
 }
